01-basic/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: web.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service-cluster-ip
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service-cluster-ip
                port:
                  number: 80
